# MangaLMM

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: deepspeed_zero2.json  deepspeed_zero3.json  deepspeed_zero3_offload.json
data/: image_split.py  preprocess.py
data/book_split/: books_test.txt  books_valid.txt
evaluation/: eval_OCR.ipynb  inference_OCR.py  inference_VQA.py  rrc_evaluation_funcs.py  text_eval_script.py
scripts/: 7B_OCR.sh  7B_VQA.sh  MangaLMM.sh  inference_OCR.sh
src/: qwen25vl_ft.py
