[project]
name = "MangaLMM"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.3.0",
    "bitsandbytes==0.45.1",
    "einops==0.8.0",
    "hjson==1.2.0",
    "msgpack==1.1.0",
    "nltk==3.9.1",
    "peft==0.14.0",
    "py-cpuinfo==9.0.0",
    "pydantic==2.10.6",
    "qwen-vl-utils==0.0.10",
    "tokenizers==0.21.0",
    "transformers",
    "trl",
    "wandb==0.19.6",
    "openai",
    "natsort",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]
cu118 = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]
cu121 = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]
cu124 = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]
cu126 = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]
deepspeed = [ "deepspeed" ]
flashattn = [ "flash-attn" ]
notebook = [
    "ipywidgets==8.1.5",
    "notebook==7.3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu118" },
        { extra = "cu121" },
        { extra = "cu124" },
        { extra = "cu126" },
    ],
]
no-build-isolation-package = ["flash-attn"]

[[tool.uv.dependency-metadata]]
name = "deepspeed"
version = "0.16.3"
requires-dist = ["torch", "einops"]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.7.4"
requires-dist = ["torch", "einops"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "cu118" },
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cu126", extra = "cu126" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "cu118" },
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cu126", extra = "cu126" },
]
transformers = { git = "https://github.com/huggingface/transformers", rev = "6b550462139655d488d4c663086a63e98713c6b9" }
trl = { git = "https://github.com/huggingface/trl", rev = "bbdd6db17c49db813695d0a8bc0da7bf6b1bb88e" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-ignore = ["E402"]
